sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:12: error: not found: value A
  while (getValeur(0)!=A){
                       ^AlgBubbleSort1:15: error: not found: value B
  while (getValeur(0)!=B){
                       ^AlgBubbleSort1:18: error: not found: value C
  while (getValeur(0)!=C){
                       ^AlgBubbleSort1:21: error: not found: value D
  while (getValeur(0)!=D){
                       ^AlgBubbleSort1:24: error: not found: value E
  while (getValeur(0)!=E){
                       ^AlgBubbleSort1:27: error: not found: value F
  while (getValeur(0)!=F){
                       ^AlgBubbleSort1:30: error: not found: value G
  while (getValeur(0)!=G){
                       ^AlgBubbleSort1:33: error: not found: value H
  while (getValeur(0)!=H){
                       ^AlgBubbleSort1:36: error: not found: value I
  while (getValeur(0)!=I){
                       ^AlgBubbleSort1:39: error: not found: value J
  while (getValeur(0)!=J){
                       ^