sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var i = 0
  while(i<getNombreValeurs()-1){
    if (plusPetit(i,i+1)==false){
      i=i+1
    }
  }
}

def tri(){
  while (getValeur(0)!=A){
    bubbleSort()
  }
  while (getValeur(0)!=B){
    bubbleSort()
  }
  while (getValeur(0)!=C){
    bubbleSort()
  }
  while (getValeur(0)!=D){
    bubbleSort()
  }
  while (getValeur(0)!=E){
    bubbleSort()
  }
  while (getValeur(0)!=F){
    bubbleSort()
  }
  while (getValeur(0)!=G){
    bubbleSort()
  }
  while (getValeur(0)!=H){
    bubbleSort()
  }
  while (getValeur(0)!=I){
    bubbleSort()
  }
  while (getValeur(0)!=J){
    bubbleSort()
  }
}

